--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">LE_SHI</string>
+
+    <string-array name="tabs">
+        <item>首页</item>
+        <item>拌饭</item>
+        <item>会员</item>
+        <item>直播</item>
+        <item>我的</item>
+    </string-array>
 </resources>
