--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">LE_SHI</string>
 
+    <string name="find_no_result">没有找到相应的资源</string>
+    <string name="loading">正在加载</string>
     <string-array name="tabs">
         <item>首页</item>
         <item>拌饭</item>
