--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,18 +12,22 @@
     </string-array>
 
     <string-array name="tab_titles">
-        <item>热点</item>
         <item>精选</item>
         <item>电视剧</item>
         <item>电影</item>
         <item>综艺</item>
-        <item>自制</item>
         <item>动漫</item>
-        <item>体育</item>
+        <item>资讯</item>
         <item>音乐</item>
-        <item>财经</item>
-        <item>科技</item>
+        <item>微电影</item>
     </string-array>
 
+    <string name="sun">周日</string>
+    <string name="mon">周一</string>
+    <string name="tue">周二</string>
+    <string name="wed">周三</string>
+    <string name="thu">周四</string>
+    <string name="fri">周五</string>
+    <string name="sat">周六</string>
 
 </resources>
