--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="loading">正在加载</string>
     <string-array name="tabs">
         <item>首页</item>
-        <item>拌饭</item>
+        <item>商城</item>
         <item>会员</item>
         <item>直播</item>
         <item>我的</item>
