--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="ajb_agreement">《乐视协议》</string>
     <string name="register_now">注册</string>
     <string name="get_ver_code_again">%s秒后重新获取</string>
+    <string name="register_new_user">注册新用户</string>
+    <string name="btn_login">登录</string>
 
     <string name="get_again">重新获取</string>
     <string-array name="tabs">
